<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtName"
            android:hint="@string/your_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:fontFamily="monospace"
            app:met_singleLineEllipsis="true"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtEmail"
            android:hint="@string/your_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:fontFamily="monospace"
            app:met_singleLineEllipsis="true"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtMobile"
            android:hint="@string/your_mobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:fontFamily="monospace"
            app:met_singleLineEllipsis="true"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtFeedback"
            android:hint="@string/your_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:fontFamily="monospace"
            app:met_singleLineEllipsis="true"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            />



    </LinearLayout>

</android.support.v7.widget.CardView>