<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Overview">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginRight="@dimen/ten_max"
            android:layout_marginTop="@dimen/ten_max"
            android:layout_marginLeft="@dimen/ten_max"
            android:layout_marginBottom="@dimen/ten_max"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/linear"
                android:layout_marginTop="@dimen/linear"
                android:layout_marginRight="@dimen/linear"
                android:layout_marginBottom="@dimen/linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:text="About us"
                    android:id="@+id/tvAboutUs"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:text="loading ... "
                    android:id="@+id/tvAboutUsContent"
                    android:textSize="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginRight="@dimen/ten_max"
            android:layout_marginTop="@dimen/ten_max"
            android:layout_marginLeft="@dimen/ten_max"
            android:layout_marginBottom="@dimen/ten_max"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/linear"
                android:layout_marginTop="@dimen/linear"
                android:layout_marginRight="@dimen/linear"
                android:layout_marginBottom="@dimen/linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:text="@string/what_we_do"
                    android:id="@+id/tvWhatWeDo"
                    android:textSize="@dimen/large"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:text="@string/loading"
                    android:id="@+id/tvWhatWeDoContent"
                    android:textSize="@dimen/medium"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/ten_max"
        android:layout_marginTop="@dimen/ten_max"
        android:layout_marginLeft="@dimen/ten_max"
        android:layout_marginBottom="@dimen/ten_max"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/linear"
            android:layout_marginTop="@dimen/linear"
            android:layout_marginRight="@dimen/linear"
            android:layout_marginBottom="@dimen/linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:text="@string/who_are_you"
                android:id="@+id/tvWhoAreYou"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:text="@string/loading"
                android:id="@+id/tvWhoAreYouContent"
                android:textSize="@dimen/medium"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

        </LinearLayout></ScrollView>

</LinearLayout>